--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "daemon_delete",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://anumulamadhava2005.github.io/daemon_delete",
+  "homepage": "https://anumulamadhava2005.github.io/delete",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
